<resources>
    <string name="app_name">Weather Channel</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Pages -->
    <string name="navigation_main_page">Main</string>
    <string name="navigation_setting_page">Settings</string>
    <string name="navigation_information_page">Informations</string>

    <string name="action_settings">Settings</string>

    <!-- Content Pages -->
    <string name="text_value_empty">Value</string>
    <string name="text_value_name_city">City name</string>
    <string name="text_value_name_country">Country name</string>
    <string name="text_value_latitude">Latitude</string>
    <string name="text_value_longitude">Longitude</string>
    <string name="text_value_api_sources">API sources: </string>
    <string name="text_value_description">Description</string>
    <string name="text_value_temperature">Temperature</string>
    <string name="text_value_last_update">Last Update</string>
    <string name="text_value_graphic">Graphic</string>
    <string name="text_value_humidity">Humidity</string>
    <string name="text_value_wind">Wind</string>
    <string name="text_value_clouds">Clouds</string>
    <string name="text_value_pressure">Pressure</string>
    <string name="text_value_uv">UV</string>
    <string name="text_value_nb_days">Number Days</string>
    <string name="text_value_nb_days_init">(1)</string>

    <!-- String Format -->
    <string name="format_simple_date">yyyy-MM-dd HH:mm:ss</string>

    <!-- Graphic -->
    <string name="graphic_temperature_title">Temperature graphic</string>
    <string name="graphic_humidity_title">Humidity graphic</string>
    <string name="graphic_pressure_title">Pressure graphic</string>
    <string name="graphic_wind_title">Wind graphic</string>
    <string name="graphic_cloud_title">Cloud graphic</string>
    <string name="graphic_temperature_y_title">Temperature</string>
    <string name="graphic_percentage_y_title">Percentage</string>
    <string name="graphic_speed_y_title">Speed m/s</string>
    <string name="graphic_x_title">Hours</string>

    <!-- Dialogs -->
    <string name="dialog_valid_button">OK</string>
    <string name="dialog_cancel_button">Cancel</string>

    <!-- GPS -->
    <string name="dialog_gps_title">GPS is settings</string>
    <string name="dialog_gps_message">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="dialog_gps_setting_button">Settings</string>

    <!-- Add City -->
    <string name="dialog_add_city_title">Add new city</string>
    <!-- /Dialogs -->

    <!-- Toast -->


    <!-- Table -->
    <string name="title_uv_index">UV Index</string>
    <string name="row_green_uv">0–2.9</string>
    <string name="row_yellow_uv">3–5.9</string>
    <string name="row_orange_uv">6–7.9</string>
    <string name="row_red_uv">8–10.9</string>
    <string name="row_purple_uv">11+</string>

    <string name="title_risk_index">Risk of harm from unprotected sun exposure,\nfor the average adult</string>
    <string name="row_green_risk">Low</string>
    <string name="row_yellow_risk">Moderate</string>
    <string name="row_orange_risk">High</string>
    <string name="row_red_risk">Very High</string>
    <string name="row_purple_risk">Extreme</string>

    <string name="title_recommendation_index">Recommended protection</string>
    <string name="row_green_recommend">Wear sunglasses on bright days;\nuse sunscreen if there is snow on the ground,\nwhich reflects UV radiation,\nor if you have particularly fair skin.</string>
    <string name="row_yellow_recommend">Take precautions, such as covering up, if you will be outside.\nStay in shade near midday when the sun is strongest.</string>
    <string name="row_orange_recommend">Cover the body with sun protective clothing,\nuse SPF 30+ sunscreen, wear a hat,\nreduce time in the sun within three hours of solar noon,\nand wear sunglasses.</string>
    <string name="row_red_recommend">Wear SPF 30+ sunscreen, a shirt,\nsunglasses, and a wide-brimmed hat.\nDo not stay in the sun for too long.</string>
    <string name="row_purple_recommend">Take all precautions: Wear SPF 30+ sunscreen,\na long-sleeved shirt and trousers, sunglasses,\nand a very broad hat.\nAvoid the sun within three hours of solar noon.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Ref to website -->
    <string name="website_source"><a href="http://openweathermap.org/">http://openweathermap.org/</a></string>
</resources>
