<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_main"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/navigation_main_page"
            />
        <item android:id="@+id/nav_setting" android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/navigation_setting_page" />
        <item android:id="@+id/nav_information" android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/navigation_information_page" />
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item android:id="@+id/nav_share" android:icon="@android:drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item android:id="@+id/nav_send" android:icon="@android:drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>