<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Fragment.SettingFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/navigation_setting_page"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp" >

                <Spinner
                    android:id="@+id/spinnerCities"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/text_value_name_city"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <Button
                    android:id="@+id/buttonAddCity"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center"
                    android:background="@mipmap/ic_add_city_r"
                    />
            </RelativeLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryOpac" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/textViewGraphic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/text_value_graphic"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <ImageView
                    android:foregroundGravity="center"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/ic_graphic_blue"
                    android:layout_marginStart="15dp"
                    android:layout_toEndOf="@+id/textViewGraphic" />


                <Switch
                    android:id="@+id/switchGraphic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/textViewGraphic"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center" />
            </RelativeLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryOpac" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/textViewHumidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/text_value_humidity"
                    android:textAppearance="?android:attr/textAppearanceLarge" />


                <ImageView
                    android:foregroundGravity="center"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/ic_humidity_blue"
                    android:layout_marginStart="15dp"
                    android:layout_toEndOf="@+id/textViewHumidity" />

                <Switch
                    android:id="@+id/switchHumidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/textViewHumidity"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center" />
            </RelativeLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryOpac" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/textViewWind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/text_value_wind"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <ImageView
                    android:foregroundGravity="center"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/ic_wind_blue"
                    android:layout_marginStart="15dp"
                    android:layout_toEndOf="@+id/textViewWind" />


                <Switch
                    android:id="@+id/switchWind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/textViewWind"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center" />
            </RelativeLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryOpac" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/textViewClouds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/text_value_clouds"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <ImageView
                    android:foregroundGravity="center"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/ic_clouds_blue"
                    android:layout_marginStart="15dp"
                    android:layout_toEndOf="@+id/textViewClouds" />

                <Switch
                    android:id="@+id/switchClouds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/textViewClouds"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center" />
            </RelativeLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryOpac" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/textViewPressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/text_value_pressure"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <ImageView
                    android:foregroundGravity="center"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/ic_pressure_blue"
                    android:layout_marginStart="15dp"
                    android:layout_toEndOf="@+id/textViewPressure" />

                <Switch
                    android:id="@+id/switchPressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/textViewPressure"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center" />
            </RelativeLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryOpac" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/textViewUV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/text_value_uv"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <ImageView
                    android:foregroundGravity="center"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/ic_uv_blue"
                    android:layout_marginStart="15dp"
                    android:layout_toEndOf="@+id/textViewUV" />

                <Switch
                    android:id="@+id/switchUV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/textViewUV"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center" />
            </RelativeLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryOpac" />

            <LinearLayout
                android:id="@+id/layoutNbDays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/text_value_nb_days"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/textViewNbDays"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/text_value_nb_days_init"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <SeekBar
                    android:id="@+id/seekBarNbDays"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>
